--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/shortid": "0.0.29",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "shortid": "^2.2.16",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
