--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.2",
     "shortid": "^2.2.16",
     "typescript": "^4.1.2",
+    "use-sound": "^2.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
