--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/shortid": "0.0.29",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,7 +22,6 @@
     "react-scripts": "4.0.2",
     "shortid": "^2.2.16",
     "typescript": "^4.1.2",
-    "use-sound": "^2.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
