--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kornienko199004/react-game#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.3.4",
     "express": "^4.17.1",
     "mongoose": "^5.11.18"
