--- a/client/package.json
+++ b/client/package.json
@@ -58,5 +58,6 @@
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
